# EUgene

./: EUgene (1).pptx  README.md  compose.yaml
backend/: .gitignore  langgraph.json  main.py  pyproject.toml
backend/app/api/: companies.py  rag.py
backend/app/langgraph/: agent.py
backend/app/rag/: RAG_IMPLEMENTATION_GUIDE copy.md
backend/app/services/: rag_service.py
backend/scripts/: create_company_profiles_table.sql
frontend/: README.md  index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BackendConnectionTest.tsx
frontend/src/components/layout/: AppLayout.tsx  Navbar.tsx
frontend/src/components/shared/: ImpactBadge.tsx  LegislativeDetailSheet.tsx  RegulatoryCard.tsx  StatusBadge.tsx  TopicBadge.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-rag-query.ts  useChatSessions.ts  useMeetings.ts
frontend/src/integrations/supabase/: types.ts
frontend/src/lib/: api-client.ts  mockData.ts  topicUtils.ts
frontend/src/pages/: Board.tsx  Chat.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Onboarding.tsx  Settings.tsx  VoiceCall.tsx
frontend/supabase/: config.toml
frontend/supabase/schemas/: 99_disable_rls_dev.sql
