[project]
name = "openeu-backend"
version = "0.0.1"
description = ""
authors = [{ name = "CSEE" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "pre-commit==3.7.1",
    "python-dotenv==1.0.1",
    "fastapi==0.115.12",
    "poetry-core==2.1.3",
    "supabase==2.15.1",
    "mypy==1.15.0",
    "requests==2.32.3",
    "types-requests==2.32.0.20250328",
    "bs4==0.0.2",
    "scrapy==2.13.0",
    "parsel==1.10.0",
    "uvicorn>=0.34.2,<0.35",
    "crawl4ai==0.6.3",
    "types-python-dateutil==2.9.0.20250516",
    "deepl>=1.22.0,<2",
    "brevo-python>=1.1.2,<2",
    "rapidfuzz>=3.13.0,<4",
    "tiktoken>=0.9.0,<0.10",
    "openai>=1.82.0,<2",
    "scrapy-playwright>=0.0.43,<0.0.44",
    "playwright>=1.52.0,<2",
    "pygit2==1.18.0",
    "keybert>=0.9.0,<0.10",
    "scikit-learn>=1.6.1,<2",
    "sentence-transformers>=4.1.0,<5",
    "jinja2==3.1.3",
    "langchain>=0.3.25,<0.4",
    "schedule>=1.2.2,<2",
    "python-jose==3.5.0",
    "langdetect>=1.0.9,<2",
    "psycopg2-binary>=2.9.10,<3",
    "fastapi-cache2==0.2.2",
    "cohere>=5.15.0,<6",
    "pandas>=2.3.0,<3",
    "openpyxl>=3.1.5,<4",
    "langchain-community>=0.3.27,<0.4",
    "pypdf>=5.7.0,<6",
    "python-docx>=1.2.0,<2",
    "email-validator>=2.3.0,<3",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.7",
]

[tool.ruff]
line-length = 120
ignore = ["I001"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    #PEP8-Naming
    "N",
]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
